--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://meyerweb.com/eric/tools/css/reset/reset.css"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>Hinos</title>
   </head>
   <body>
@@ -122,6 +122,6 @@
       </defs>
     </svg>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
